Agregamos una medusa a la pagina

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hola mundo soy Sebastian</h1>
+    <div>
+        <img src="Jellyfish.jpg" alt="" srcset="">
+    </div>
 </body>
 </html>
