Redujimos la imagen un 60%

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Sebastian</title>
 </head>
 <body>
-    <h1>Hola mundo soy Sebastian</h1>
+    <h1 style="color: deeppink">Hola mundo soy Sebastian</h1>
     <div>
-        <img src="Jellyfish.jpg" alt="" srcset="">
+        <img src="Jellyfish.jpg" alt="" width="60%">
     </div>
 </body>
 </html>
