Secambiarons los colores u las posiciones de los elementos

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sebastian</title>
 </head>
-<body>
-    <h1 style="color: deeppink">Hola mundo soy Sebastian</h1>
+<body style="background-color:maroon">
+    <h1 style="color: rgb(44, 7, 252); padding-left: 250px" >Bienvenido al infierno :3</h1>
     <div>
-        <img src="Jellyfish.jpg" alt="" width="60%">
+        <img src="Jellyfish.jpg" alt="" width="60%" style="padding-left: 200px">
     </div>
 </body>
 </html>
